Bug 154079 - Drag&drop over taskbar entries does not activate the window
Summary: Drag&drop over taskbar entries does not activate the window
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-15 06:44 UTC by Syam
Modified: 2008-06-07 18:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Syam 2007-12-15 06:44:40 UTC
Version:           3.0 (using KDE KDE 3.97.0)
Installed from:    SuSE RPMs
OS:                Linux

I am posting this bug http://bugs.kde.org/show_bug.cgi?id=36065 for KWin for KDE 4.
I am using the OpenSuSE based live CD (0.8), running KDE 4 rc2.
Using Dolphin, it is still impossible to drag and drop files from a larger window on to a smaller window infront of it.
Also, dragging and holding a file to the taskbar does not bring up the target window, unlike in KDE 3.

PS: I am running the live cd with QEMU.
Comment 1 Lubos Lunak 2007-12-17 18:42:18 UTC
The main part of this report is simply a duplicate of #36065, so keeping and reassigning only as a report about taskbar.
Comment 2 Syam 2007-12-18 02:33:57 UTC
So does that mean the first problem (with KWin) is a WON"T FIX?? Bug #36065 is not getting any attention as the discussion almost ended with 'hopefully in KDE4'. SO I thought it would be better to post a bug for KWin for KDE4, where developers might actually notice it!
Comment 3 Lubos Lunak 2007-12-18 09:49:51 UTC
No, it is, as stated, a duplicate. And I don't see where you get the idea that reporting something again for KDE4 will somehow magically make it exist.
Comment 4 Syam 2007-12-18 15:12:42 UTC
Isn't KWin for KDE4 a different product than KWin/KDE3? And no, I don't believe bugs.kde.org does magic.
Comment 5 Lubos Lunak 2007-12-18 15:26:44 UTC
No. KWin is still KWin.
Comment 6 Syam 2007-12-18 15:28:23 UTC
Well, in that case, I withdraw my case regarding KWin/KDE 4. My bad!
Comment 7 Jason Stubbs 2007-12-21 14:53:04 UTC
SVN commit 751250 by jstubbs:

Activate the window if a drag enters and is held for 300ms

BUG: 154079


 M  +32 -2     tasks.cpp  
 M  +7 -2      tasks.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=751250
Comment 8 Paul Eggleton 2008-06-07 12:42:42 UTC
The original bug mentioned dragging to an item on the plasma taskbar. This still doesn't work in 4.1 beta 1 and is (in theory) a regression from KDE 3, could this bug please be reopened?
Comment 9 Syam 2008-06-07 14:32:21 UTC
Actually.. it works fine on KDE 4.0.4/Fedora 9. But I just tested it with KDE4Daily r810996, and it doesn't work. :-(
Comment 10 Marco Martin 2008-06-07 18:42:42 UTC
it was fixed again by 811973