Activate the window if a drag enters and is held for 300ms

BUG: 154079

svn path=/trunk/KDE/kdebase/workspace/; revision=751250